--- a/index.html
+++ b/index.html
@@ -76,5 +76,8 @@
         <ul>
             <li><a href="./hobies.html">My Hobbies</a></li>
         </ul>
+        <footer>
+            <p>© Gokulakrishnan S. All rights reserved.</p>
+        </footer>
     </body>
 </html>
